Added links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   </head>
   <body>
     <h1>Welcome to the Weather App</h1>
-    <footer>Built by Amelia Steyn</footer>
+    <footer>
+      Built by
+      <a href="https://github.com/DaisyGaze" target="_blank"> Amelia Steyn</a>,
+      code hosted on
+      <a href="https://github.com/DaisyGaze/weather_app" target="_blank"
+        >Github</a
+      >
+      and website hosted on
+      <a
+        href="https://app.netlify.com/sites/stellular-mochi-50c7d1"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
