--- a/index.html
+++ b/index.html
@@ -6,15 +6,31 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Switzerland</h1>
+        <p>
+          Thursday 10:00, Mostly cloudy
+          <br />
+          Humidity: 77%, Wind: 16 km/h
+        </p>
+      </div>
+      <div>🌤 6°C</div>
+    </main>
     <footer>
-      Built by
+      This project was coded by
       <a href="https://github.com/DaisyGaze" target="_blank"> Amelia Steyn</a>,
-      code hosted on
+      it is open-sourced on
       <a href="https://github.com/DaisyGaze/weather_app" target="_blank"
         >Github</a
       >
-      and website hosted on
+      and hosted on
       <a
         href="https://app.netlify.com/sites/stellular-mochi-50c7d1"
         target="_blank"
