--- a/index.html
+++ b/index.html
@@ -3,39 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=SUSE:wght@100..800&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Switzerland</h1>
-        <p>
-          Thursday 10:00, Mostly cloudy
-          <br />
-          Humidity: 77%, Wind: 16 km/h
-        </p>
-      </div>
-      <div>🌤 6°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/DaisyGaze" target="_blank"> Amelia Steyn</a>,
-      it is open-sourced on
-      <a href="https://github.com/DaisyGaze/weather_app" target="_blank"
-        >Github</a
-      >
-      and hosted on
-      <a
-        href="https://app.netlify.com/sites/stellular-mochi-50c7d1"
-        target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Switzerland</h1>
+          <p>
+            Thursday 10:00, Mostly cloudy
+            <br />
+            Humidity: 77%, Wind: 16 km/h
+          </p>
+        </div>
+        <div>🌤 6°C</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/DaisyGaze" target="_blank"> Amelia Steyn</a
+        >, it is open-sourced on
+        <a href="https://github.com/DaisyGaze/weather_app" target="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a
+          href="https://app.netlify.com/sites/stellular-mochi-50c7d1"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
