--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city.." required />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-form-input" />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Switzerland</h1>
-          <p>
-            Thursday 10:00, Mostly cloudy
-            <br />
-            Humidity: 77%, Wind: 16 km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Switzerland</h1>
+            <p class="weather-app-details">
+              Thursday 10:00, Mostly cloudy
+              <br />
+              Humidity: <strong>77%</strong>, Wind: <strong>16 km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">🌤</div>
+            <div class="weather-app-temperature">6</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div>🌤 6°C</div>
       </main>
       <footer>
         This project was coded by
