--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
+            id="search-form-input"
             class="search-form-input" />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -26,7 +27,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Switzerland</h1>
+            <h1 class="weather-app-city" id="city">Switzerland</h1>
             <p class="weather-app-details">
               Thursday 10:00, Mostly cloudy
               <br />
@@ -55,5 +56,6 @@
         >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
