--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Switzerland</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Thursday 10:00, Mostly cloudy
               <br />
@@ -38,7 +38,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤</div>
-            <div class="weather-app-temperature">6</div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
