--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Thursday 10:00, Mostly cloudy
+              <span id="time"></span>
+              <span id="description"></span>
               <br />
-              Humidity: <strong>77%</strong>, Wind: <strong>16 km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
